:bug: Fix post problem on small screen. - Not clickable because "Info" div obstruct the image. - Title is too large.

--- a/src/components/post.css
+++ b/src/components/post.css
@@ -29,7 +29,7 @@
 
 .post-title {
     font-weight: 400;
-    font-size: 2.5em;
+    font-size: 1.5em;
     padding-bottom: 8px;
 }
 
